{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 1194,
  "lineage": "e657a6eb-08aa-82a4-4978-50defbef5c61",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:095278325161:loadbalancer/app/browny-app-load-balancer/5a6e14ab2b842145",
            "arn_suffix": "app/browny-app-load-balancer/5a6e14ab2b842145",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "browny-app-load-balancer-471547068.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:095278325161:loadbalancer/app/browny-app-load-balancer/5a6e14ab2b842145",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "browny-app-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03d8abe80eb0aaedf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01a7f95ccc7c73439"
              },
              {
                "subnet_id": "subnet-0b93268ed41803a9e"
              }
            ],
            "subnets": [
              "subnet-01a7f95ccc7c73439",
              "subnet-0b93268ed41803a9e"
            ],
            "vpc_id": "vpc-0d6c59b7e134e228c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public",
            "aws_vpc.browny_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "browny-app-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:095278325161:listener/app/browny-app-load-balancer/5a6e14ab2b842145/e88cba67e1f4a0c3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:095278325161:listener/app/browny-app-load-balancer/5a6e14ab2b842145/e88cba67e1f4a0c3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:095278325161:loadbalancer/app/browny-app-load-balancer/5a6e14ab2b842145",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_security_group.alb-sg",
            "aws_subnet.public",
            "aws_vpc.browny_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "browny-app-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:095278325161:listener/app/browny-app-load-balancer/5a6e14ab2b842145/39857d2fcf424a48",
            "certificate_arn": "arn:aws:acm:us-east-1:095278325161:certificate/8824b151-6bbd-4924-9321-6093e6c9592e",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:095278325161:targetgroup/browny-app-tg/369d4603a7714980",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:095278325161:listener/app/browny-app-load-balancer/5a6e14ab2b842145/39857d2fcf424a48",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:095278325161:loadbalancer/app/browny-app-load-balancer/5a6e14ab2b842145",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.devops_cert",
            "aws_acm_certificate_validation.devops_cert_validation",
            "aws_alb.alb",
            "aws_alb_target_group.browny-app_tg",
            "aws_route53_record.cert_validation",
            "aws_security_group.alb-sg",
            "aws_subnet.public",
            "aws_vpc.browny_vpc",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "browny-app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:095278325161:targetgroup/browny-app-tg/369d4603a7714980",
            "arn_suffix": "targetgroup/browny-app-tg/369d4603a7714980",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:095278325161:targetgroup/browny-app-tg/369d4603a7714980",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "browny-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d6c59b7e134e228c"
          },
          "dependencies": [
            "aws_vpc.browny_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "browny_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b2b63cca939cd558",
            "arn": "arn:aws:ec2:us-east-1:095278325161:elastic-ip/eipalloc-0b2b63cca939cd558",
            "domain": "vpc",
            "id": "eipalloc-0b2b63cca939cd558",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-223-52-27.compute-1.amazonaws.com",
            "public_ip": "3.223.52.27",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.browny_igw",
            "aws_vpc.browny_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07bd2eecf4665e1c7",
            "arn": "arn:aws:ec2:us-east-1:095278325161:elastic-ip/eipalloc-07bd2eecf4665e1c7",
            "domain": "vpc",
            "id": "eipalloc-07bd2eecf4665e1c7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-212-4-80.compute-1.amazonaws.com",
            "public_ip": "3.212.4.80",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.browny_igw",
            "aws_vpc.browny_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "browny_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095278325161:internet-gateway/igw-0b205fa730234a471",
            "id": "igw-0b205fa730234a471",
            "owner_id": "095278325161",
            "tags": {
              "Name": "browny_igw"
            },
            "tags_all": {
              "Name": "browny_igw"
            },
            "vpc_id": "vpc-0d6c59b7e134e228c"
          },
          "dependencies": [
            "aws_vpc.browny_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "browny_natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b2b63cca939cd558",
            "association_id": "eipassoc-02d878dd4dc988a19",
            "connectivity_type": "public",
            "id": "nat-02b763734d5389068",
            "network_interface_id": "eni-0876dfe88d7cce08a",
            "private_ip": "172.16.2.239",
            "public_ip": "3.223.52.27",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01a7f95ccc7c73439",
            "tags": {
              "Name": "browny_natgw_0"
            },
            "tags_all": {
              "Name": "browny_natgw_0"
            }
          },
          "dependencies": [
            "aws_eip.browny_eip",
            "aws_internet_gateway.browny_igw",
            "aws_subnet.public",
            "aws_vpc.browny_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07bd2eecf4665e1c7",
            "association_id": "eipassoc-0748031d69998aae5",
            "connectivity_type": "public",
            "id": "nat-040f156998cb73608",
            "network_interface_id": "eni-065f7b77efa47c154",
            "private_ip": "172.16.3.133",
            "public_ip": "3.212.4.80",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b93268ed41803a9e",
            "tags": {
              "Name": "browny_natgw_1"
            },
            "tags_all": {
              "Name": "browny_natgw_1"
            }
          },
          "dependencies": [
            "aws_eip.browny_eip",
            "aws_internet_gateway.browny_igw",
            "aws_subnet.public",
            "aws_vpc.browny_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b205fa730234a471",
            "id": "r-rtb-09c4d3b7e6204590b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09c4d3b7e6204590b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.browny_igw",
            "aws_vpc.browny_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095278325161:route-table/rtb-052b49ba23eb81f68",
            "id": "rtb-052b49ba23eb81f68",
            "owner_id": "095278325161",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02b763734d5389068",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table_0"
            },
            "tags_all": {
              "Name": "private_route_table_0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6c59b7e134e228c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.browny_eip",
            "aws_internet_gateway.browny_igw",
            "aws_nat_gateway.browny_natgw",
            "aws_subnet.public",
            "aws_vpc.browny_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095278325161:route-table/rtb-08f033d2dfa414954",
            "id": "rtb-08f033d2dfa414954",
            "owner_id": "095278325161",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-040f156998cb73608",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table_1"
            },
            "tags_all": {
              "Name": "private_route_table_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6c59b7e134e228c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.browny_eip",
            "aws_internet_gateway.browny_igw",
            "aws_nat_gateway.browny_natgw",
            "aws_subnet.public",
            "aws_vpc.browny_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be83b9ac2c84d0b9",
            "route_table_id": "rtb-052b49ba23eb81f68",
            "subnet_id": "subnet-0c765dd802ecfe9cb"
          },
          "dependencies": [
            "aws_eip.browny_eip",
            "aws_internet_gateway.browny_igw",
            "aws_nat_gateway.browny_natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.browny_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08901c7a47d01e25e",
            "route_table_id": "rtb-08f033d2dfa414954",
            "subnet_id": "subnet-0b520dcd7aa4b6128"
          },
          "dependencies": [
            "aws_eip.browny_eip",
            "aws_internet_gateway.browny_igw",
            "aws_nat_gateway.browny_natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.browny_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095278325161:security-group/sg-03d8abe80eb0aaedf",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03d8abe80eb0aaedf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "projectapp-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "095278325161",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d6c59b7e134e228c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.browny_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095278325161:security-group/sg-0b52f0dfafcf017fb",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b52f0dfafcf017fb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03d8abe80eb0aaedf"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "projectapp-ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "095278325161",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d6c59b7e134e228c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.browny_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095278325161:subnet/subnet-0c765dd802ecfe9cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c765dd802ecfe9cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "095278325161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_0"
            },
            "tags_all": {
              "Name": "private_subnet_0"
            },
            "vpc_id": "vpc-0d6c59b7e134e228c"
          },
          "dependencies": [
            "aws_vpc.browny_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095278325161:subnet/subnet-0b520dcd7aa4b6128",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b520dcd7aa4b6128",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "095278325161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1"
            },
            "tags_all": {
              "Name": "private_subnet_1"
            },
            "vpc_id": "vpc-0d6c59b7e134e228c"
          },
          "dependencies": [
            "aws_vpc.browny_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095278325161:subnet/subnet-01a7f95ccc7c73439",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a7f95ccc7c73439",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "095278325161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_0"
            },
            "tags_all": {
              "Name": "public_subnet_0"
            },
            "vpc_id": "vpc-0d6c59b7e134e228c"
          },
          "dependencies": [
            "aws_vpc.browny_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095278325161:subnet/subnet-0b93268ed41803a9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b93268ed41803a9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "095278325161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1"
            },
            "tags_all": {
              "Name": "public_subnet_1"
            },
            "vpc_id": "vpc-0d6c59b7e134e228c"
          },
          "dependencies": [
            "aws_vpc.browny_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "browny_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:095278325161:vpc/vpc-0d6c59b7e134e228c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0cb663563e1903189",
            "default_route_table_id": "rtb-09c4d3b7e6204590b",
            "default_security_group_id": "sg-05e64d7c9df6583c1",
            "dhcp_options_id": "dopt-021ea7dbfa8c11692",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d6c59b7e134e228c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09c4d3b7e6204590b",
            "owner_id": "095278325161",
            "tags": {
              "Name": "browny_vpc"
            },
            "tags_all": {
              "Name": "browny_vpc"
            }
          }
        }
      ]
    }
  ]
}